--- a/01-debug/03-redux-devtool/.vscode/settings.json
+++ b/01-debug/03-redux-devtool/.vscode/settings.json
@@ -1,32 +1,22 @@
 {
   "css.validate": true,
-  "editor.formatOnSave": true,
-  "eslint.autoFixOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
+  "editor.codeActionsOnSaveTimeout": 2000,
+  "editor.formatOnSave": false,
+  "editor.tabSize": 2,
+  "editor.wordWrap": "on",
   "eslint.enable": true,
-  "eslint.validate": [
-    {
-      "language": "javascript",
-      "autoFix": true
-    },
-    {
-      "language": "javascriptreact",
-      "autoFix": true
-    },
-    {
-      "language": "typescript",
-      "autoFix": true
-    },
-    {
-      "language": "typescriptreact",
-      "autoFix": true
-    }
-  ],
+  "eslint.packageManager": "yarn",
   "files.insertFinalNewline": true,
   "files.trimTrailingWhitespace": true,
-  "prettier.eslintIntegration": true,
-  "prettier.stylelintIntegration": true,
+  "stylelint.autoFixOnSave": true,
+  "stylelint.configOverrides": {
+    "ignoreFiles": ["node_modules/**/*.*"]
+  },
   "stylelint.enable": true,
-  "typescript.tsserver.trace": "verbose",
+  "typescript.tsdk": "node_modules/typescript/lib",
   "[markdown]": {
     "files.trimTrailingWhitespace": false
   }
